--- a/references.bib
+++ b/references.bib
@@ -83,6 +83,14 @@
   year={2017}
 }
 
+@article{dinh2016density,
+  title={Density estimation using {Real NVP}},
+  author={Dinh, Laurent and Sohl-Dickstein, Jascha and Bengio, Samy},
+  journal={arXiv},
+  volume={1605.08803},
+  year={2016}
+}
+
 @incollection{doucet2001introduction,
   title={An introduction to sequential {M}onte {C}arlo methods},
   author={Doucet, Arnaud and De Freitas, Nando and Gordon, Neil},
